clang/test/BSC/Negative/Trait/r3/define_trait_var/define_trait_var.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

int main() {
  _Trait F a; // expected-error {{only _Trait pointer type is allowed to be declared}}
  return 0;
}